--- a/Annual Review 2019 Report/mybib.bib
+++ b/Annual Review 2019 Report/mybib.bib
@@ -189,3 +189,46 @@
   year={1992},
   publisher={Springer}
 }
+
+@article{mosetti1994optimization,
+  title={Optimization of wind turbine positioning in large windfarms by means of a genetic algorithm},
+  author={Mosetti, GPCDB and Poloni, Carlo and Diviacco, B},
+  journal={Journal of Wind Engineering and Industrial Aerodynamics},
+  volume={51},
+  number={1},
+  pages={105--116},
+  year={1994},
+  publisher={Elsevier}
+}
+
+@article{kusiak2010design,
+  title={Design of wind farm layout for maximum wind energy capture},
+  author={Kusiak, Andrew and Song, Zhe},
+  journal={Renewable energy},
+  volume={35},
+  number={3},
+  pages={685--694},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@article{saavedra2011seeding,
+  title={Seeding evolutionary algorithms with heuristics for optimal wind turbines positioning in wind farms},
+  author={Saavedra-Moreno, B and Salcedo-Sanz, S and Paniagua-Tineo, A and Prieto, L and Portilla-Figueras, A},
+  journal={Renewable Energy},
+  volume={36},
+  number={11},
+  pages={2838--2844},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{hou2017combined,
+  title={Combined optimization for offshore wind turbine micro siting},
+  author={Hou, Peng and Hu, Weihao and Soltani, Mohsen and Chen, Cong and Chen, Zhe},
+  journal={Applied energy},
+  volume={189},
+  pages={271--282},
+  year={2017},
+  publisher={Elsevier}
+}
