--- a/Annual Review 2019 Report/OneYearReport 0.1.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.1.tex
@@ -135,7 +135,8 @@ FOR SOME OF THE PAPERS LISTED BELOW I HAVE THE NOTES ABOUT WHAT I WANT TO SAY BU
 
 %TODO
 \subsubsection{Maintenance of the site} \label{sss:maint}
-Lorem Ipsum \\ 
+%Give overview from shafiee then note that ill do more reading soon
+
 \cite{dinwoodie2012analysis} \\
 \cite{merigaud2016condition} \\
 
