--- a/Annual Review 2019 Report/OneYearReport 0.1.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.1.tex
@@ -129,16 +129,21 @@ Another limitation of this paper are the genes, which are fairly high level. The
 
 The final thing to note about this research is the advanced weather simulation model used for the simulation. It uses a combination of transition probability matrices and a Weibull distribution to generate wind speeds and wave heights that are both sufficiently correlated to each other and themselves. The data this is based on was divided by month of the year, so the model takes time of year into account. Given the degree to which this type of project depends on the weather conditions, a realistic and sophisticated model like this is beneficial for the applicability of the model. 
 
-FOR SOME OF THE PAPERS LISTED BELOW I HAVE THE NOTES ABOUT WHAT I WANT TO SAY BUT I HAVE NOT YET WRITTEN IT DOWN. THEY ALL WILL BE SHORTER THAN WHAT I DID FOR THE PREVIOUS PAPERS BUT I TRY TO GET TO THE HEART OF THE MODELS USED AND THE LITERATURE CONTRIBUTIONS AND GAPS
-
-%TODO: consider swapping sections 3.1.2 and 3.1.2  if 3.1.3 is only about the installation (and possibly rename both/either)
-
 %TODO
 \subsubsection{Maintenance of the site} \label{sss:maint}
 %Give overview from shafiee then note that ill do more reading soon
 
-\cite{dinwoodie2012analysis} \\
-\cite{merigaud2016condition} \\
+Compared to the topic of installation installation, there is a large body of research done in the area of operation and maintenance (O\&M) of offshore wind farms. This research looks at various aspects and timescales relevant to the OWFs. In \cite{shafiee2015maintenance} the research and topics are divided into three timescales (echelons):
+
+\begin{enumerate}
+\item Strategic: Long term, over the lifespan of an OWF
+\item Tactical: Medium term, between 1 and 5 years
+\item Operational: Short term, day to day
+\end{enumerate}
+
+Within each of these echelons, various areas of research are identified. Strategic decisions are found to have the biggest impact on the costs of operations, which makes sense as they affect the largest amount of time. However each of these echelons include important decisions that will have to be made for the maintenance of the sites. 
+
+With the large amount of research done, and the variety of subjects within this field, I have yet to read much more about the current state of most subjects. This will be my immediate focus from here on, as described in more detail in \Cref{s:concl}.
 
 %TODO
 \subsubsection{Related research regarding offshore projects} \label{sss:offsh}
