--- a/Annual Review 2019 Report/mybib.bib
+++ b/Annual Review 2019 Report/mybib.bib
@@ -232,3 +232,13 @@
   year={2017},
   publisher={Elsevier}
 }
+
+@article{shafiee2015maintenance,
+  title={Maintenance logistics organization for offshore wind energy: Current progress and future perspectives},
+  author={Shafiee, Mahmood},
+  journal={Renewable Energy},
+  volume={77},
+  pages={182--193},
+  year={2015},
+  publisher={Elsevier}
+}
