--- a/Annual Review 2019 Report/mybib.bib
+++ b/Annual Review 2019 Report/mybib.bib
@@ -242,3 +242,58 @@
   year={2015},
   publisher={Elsevier}
 }
+
+@article{gabrel2014recent,
+  title={Recent advances in robust optimization: An overview},
+  author={Gabrel, Virginie and Murat, C{\'e}cile and Thiele, Aur{\'e}lie},
+  journal={European journal of operational research},
+  volume={235},
+  number={3},
+  pages={471--483},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{burke2010multi,
+  title={A multi-objective approach for robust airline scheduling},
+  author={Burke, Edmund K and De Causmaecker, Patrick and De Maere, Geert and Mulder, Jeroen and Paelinck, Marc and Berghe, Greet Vanden},
+  journal={Computers \& Operations Research},
+  volume={37},
+  number={5},
+  pages={822--832},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@article{goren2008robustness,
+  title={Robustness and stability measures for scheduling: single-machine environment},
+  author={Goren, Selcuk and Sabuncuoglu, Ihsan},
+  journal={IIE Transactions},
+  volume={40},
+  number={1},
+  pages={66--83},
+  year={2008},
+  publisher={Taylor \& Francis}
+}
+
+@article{iancu2013pareto,
+  title={Pareto efficiency in robust optimization},
+  author={Iancu, Dan A and Trichakis, Nikolaos},
+  journal={Management Science},
+  volume={60},
+  number={1},
+  pages={130--147},
+  year={2013},
+  publisher={INFORMS}
+}
+
+@article{dentcheva2010robust,
+  title={Robust stochastic dominance and its application to risk-averse optimization},
+  author={Dentcheva, Darinka and Ruszczy{\'n}ski, Andrzej},
+  journal={Mathematical Programming},
+  volume={123},
+  number={1},
+  pages={85},
+  year={2010},
+  publisher={Springer}
+}
